# triage

./: .bumpversion.cfg  .codeclimate.yml  .dockerignore  .env.example  .gitignore  .python-version  .python-version.current  .pyup.yml  .travis.yml  404.html  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  audition_config.yaml  channels-lock.scm  config.py  develop  example_audition_notebook.ipynb  example_config.yaml  example_experiment_config.yaml  example_feature_config.yaml  index.html  justfile  manage.py  manifest.scm  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  search.html  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-mkdocs.yaml  publish-to-pypi.yml  test.yaml
api/audition/: index.html
api/timechop/: index.html
architect/: builders.py  feature_dictionary_creator.py  feature_generators.py  feature_group_creator.py  feature_group_mixer.py  label_generators.py  planner.py  state_table_generators.py  utils.py
audition/: __init__.py  distance_from_best.py  metric_directionality.py  metrics_over_time.py  model_group_performance.py  plotting.py  regrets.py  selection_rule_grid.py  selection_rule_performance.py  selection_rules.py  thresholding.py  utils.py
audition/audition/: index.html
audition/audition-config/: index.html
audition/audition_intro/: index.html
audition/model_selection/: index.html
catwalk/: .travis.yml  __init__.py  evaluation.py  feature_importances.py  metrics.py  model_trainers.py  predictors.py  storage.py  utils.py
catwalk/estimators/: classifiers.py
catwalk/individual_importance/: __init__.py
collate/: __init__.py  collate.py  helpers.py  spacetime.py  sql.py
config/: logging.yaml
cookbook/: _config.yml  _toc.yml  triage_concepts.md  welcome.md
css/: base.css
db/: index.html
dirtyduck/: .dockerignore  .env  README.org  docker-compose.yml  index.html  requirements-dev.txt  requirements.txt  tutorial.sh
dirtyduck/audition/: index.html
dirtyduck/aws_batch/: index.html
dirtyduck/bastion/: Dockerfile  requirements.txt
dirtyduck/choose_your_own_adventure/: index.html
dirtyduck/data_preparation/: index.html
dirtyduck/dirty_duckling/: index.html
dirtyduck/docs/: index.html
dirtyduck/eis/: index.html
dirtyduck/experiments/: dirty-duckling.yaml  inspections_dt.yaml
dirtyduck/food_db/: 01_create_inspections_table.sql  02_create_cleaned_inspections_table.sql  03_create_violations_table.sql  05_nuke_triage.sql  Dockerfile  activate_postgis.sql  create_extensions.sql  create_inspections_table.sql  nuke_triage.sql
dirtyduck/for_the_impatient/: index.html
dirtyduck/infrastructure/: docker-compose.yml  index.html
dirtyduck/inspections/: index.html
dirtyduck/ml_governance/: index.html
dirtyduck/org/: 02_infrastructure.org  03_data_preparation.org  08_postmodeling.org  09_aws_batch.org  100_whats_next.org  index.html  index.org
dirtyduck/postmodeling/: eis_postmodeling_config.yaml
dirtyduck/problem_description/: index.html
dirtyduck/quickstart/: index.html
dirtyduck/sql/: create_cleaned_inspections_table.sql  (+1 more)
docker/: .dockerignore  Dockerfile  aws_env.example  requirements.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  md_autogen.py  mkdocs.yml  update_docs.py  usage.rst
example/: postmodeling_config.yaml
metta/: __init__.py  datafiles.py  metta_io.py  upload_s3.py
mkdocs/: search_index.json
postmodeling/: index.html
predictlist/: index.html
quickstart/: index.html
requirement/: dev.txt  extras-rq.txt  main.txt  test.txt
requirements/: dev.txt  main.txt  test.txt
results_schema/: __init__.py  alembic.ini  factories.py  schema.py
search/: search_index.json
sphinx_build/: .buildinfo  searchindex.js  triage.component.architect.html  triage.component.catwalk.estimators.html  triage.component.collate.html  triage.component.html  triage.component.postmodeling.contrast.html  triage.component.postmodeling.contrast.utils.html  triage.component.postmodeling.html  triage.experiments.html
sphinx_source/: conf.py  triage.component.catwalk.individual_importance.rst  triage.component.postmodeling.contrast.rst  triage.component.postmodeling.contrast.utils.rst  triage.component.timechop.rst  triage.experiments.rst
tests/: create_inspections_subset.py  example_schema.yaml  food_inspections_subset.csv  initialize_db.py  test_architect.py  test_collate.py  test_database_reflection.py  test_distance_from_best.py  test_entity_feature_date_generators.py  test_estimators.py  test_evaluation.py  test_experiments.py  test_factories.py  test_feature_dictionary_creator.py  test_feature_generators.py  test_feature_group_creator.py  test_feature_group_mixer.py  test_feature_importances.py  test_helpers.py  test_individual_importance.py  test_integration.py  test_label_generators.py  test_metrics_over_time.py  test_model_group_performance.py  test_model_trainers.py  test_pipeline.py  test_planner_builders.py  test_plotting.py  test_predictors.py  test_regrets.py  test_schema.py  test_scoring.py  test_selection_rules.py  test_set_generators.py  test_spacetime.py  test_state_table_generators.py  test_storage.py  test_thresholding.py  test_timechop.py  test_timeout.py  (+4 more)
timechop/: architect.py  builders.py  timechop.py  utils.py
triage/: __init__.py  cli.py  config.py  database_reflection.py  db.py  entity_feature_date_generators.py  feature_dictionary_creator.py  feature_generators.py  feature_group_creator.py  feature_group_mixer.py  feature_importances.py  features.py  label_generators.py  model_group_stored_procedure.sql  model_results_generators.py  model_trainers.py  pipeline.py  predictors.py  schema.py  scoring.py  set_generators.py  storage.py  timechop.py  timeout.py  training_label_generators.py  utils.py  validation_primitives.py
triage.experiments.base/: index.html
triage.experiments.multicore/: index.html
triage.experiments.singlethreaded/: index.html
triage_project_workflow/: index.html
(+677 files in other folders)
