
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triage"
version = "5.5.5"
description = "Risk modeling and prediction"
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "Center for Data Science and Public Policy", email = "datascifellows@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "polars==0.18.2",
    "pyarrow>=12.0.1",
    "numpy==1.26.0",
    "pandas==1.5.0",
    "alembic==1.7.7",
    "SQLAlchemy==1.3.18", # pyup: ignore
    "PyYAML==6.0.2",
    "psycopg2-binary==2.9.3",
    "boto3==1.22.4",
    "click==8.1.3",
    "inflection==0.5.1",
    "sqlalchemy-postgres-copy==0.5.0",
    "retrying==1.3.3",
    "Dickens==1.0.1",
    "signalled-timeout==1.0.0",
    "wrapt==1.14.0",
    "argcmdr==0.7.0",
    "sqlparse==0.4.4",
    "pebble==4.6.3",
    "adjustText==0.7.3",
    "graphviz==0.20",
    "requests==2.31.0",
    "coloredlogs==15.0.1",
    "verboselogs==1.7",
    "s3fs==0.4.2", # pyup: ignore
    "scikit-learn==1.6.1",
    "matplotlib==3.5.1",
    "matplotlib-inline==0.1.3",
    "seaborn==0.11.2",
    "ohio==0.5.0",
    "aequitas==0.42.0",
    "plotly==5.24.0",
    "jupyter==1.0.0",
]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://dssg.github.io/triage/"
Documentation = "https://dssg.github.io/triage/"
Source = "https://github.com/dssg/triage"
Tutorial = "https://dssg.github.io/triage/dirtyduck/"

[project.optional-dependencies]
rq = [
  # NOTE: Fill in from requirement/extras-rq.txt
]
test = [
  # NOTE: Fill in from requirement/test.txt
]

[project.scripts]
triage = "triage.cli:execute"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]
